Added space for signatures (should we need them) to front page of report.

--- a/phase-one/report.tex
+++ b/phase-one/report.tex
@@ -3,12 +3,30 @@
 \usepackage{hyperref}
 \usepackage{array}
 
+\newenvironment{signatures}{\par\vspace*{\fill}}{\clearpage}
+
 \begin{document}
 \title{CS413 Embedded Systems ACE Group One Phase One Report}
 \author{Andi Anderson \and Fraser George \and Adam McGhie \and Aidan O'Grady
 \and Kristine Semjonova}
 \date{}
 \maketitle
+
+\begin{signatures}
+\noindent We confirm and declare this report and the assignment work is entirely
+the product of our own efforts and we have not used or presented the work of
+others herein.\\
+
+Signature: $\rule{5cm}{0.15mm}$ \hfill Date: $\rule{3cm}{0.15mm}$ \\
+
+Signature: $\rule{5cm}{0.15mm}$ \hfill Date: $\rule{3cm}{0.15mm}$ \\
+
+Signature: $\rule{5cm}{0.15mm}$ \hfill Date: $\rule{3cm}{0.15mm}$ \\
+
+Signature: $\rule{5cm}{0.15mm}$ \hfill Date: $\rule{3cm}{0.15mm}$ \\
+
+Signature: $\rule{5cm}{0.15mm}$ \hfill Date: $\rule{3cm}{0.15mm}$
+\end{signatures}
 \newpage
 \tableofcontents
 \newpage
