Added images to the document and also added the new content from Google doc.

--- a/phase-one/report.bib
+++ b/phase-one/report.bib
@@ -22,3 +22,21 @@
 	title = "Rxtx",
 	howpublished = "\url{http://rxtx.qbang.org/wiki/index.php/Main_Page}"
 }
+
+@misc{Arduino,
+    author = "Arduino",
+    title = "Arduino - ArduinoBoardUno",
+    howpublished = "\url{https://www.arduino.cc/en/Main/ArduinoBoardUno}"
+}
+
+@misc{ArduinoImage,
+    author = "SparkFun Electronics",
+    title = "Arduino Uno R3",
+    howpublished = "\url{https://www.flickr.com/photos/41898857@N04/8406865680}"
+}
+
+@misc{PiImage,
+    author = "Multicherry",
+    title = "Raspberry Pi: Model B v1.1",
+    howpublished = "\url{https://en.wikipedia.org/wiki/File:Raspberry_Pi_2_Model_B_v1.1_top_new_%28bg_cut_out%29.jpg}"
+}
