--- a/phase-one/report.bib
+++ b/phase-one/report.bib
@@ -40,3 +40,9 @@
     title = "Raspberry Pi: Model B v1.1",
     howpublished = "\url{https://en.wikipedia.org/wiki/File:Raspberry_Pi_2_Model_B_v1.1_top_new_%28bg_cut_out%29.jpg}"
 }
+
+@misc{PiSpecs,
+    author = "Raspberry Pi",
+    title = "Raspberry Pi Model Specifications - Raspberry Pi Documentation",
+    howpublished = "\url{https://www.raspberrypi.org/documentation/hardware/raspberrypi/models/specs.md}"
+}
